--- a/CGMBLEKitUI/de.lproj/Localizable.strings
+++ b/CGMBLEKitUI/de.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "%@/min" = "%@/min";
 
 /* Confirmation message for deleting a CGM */
-"Are you sure you want to delete this CGM?" = "Möchten Sie dieses CGM wirklich löschen?";
+"Are you sure you want to delete this CGM?" = "Möchtest Du dieses CGM wirklich löschen?";
 
 /* The title of the cancel action in an action sheet */
 "Cancel" = "Abbrechen";
@@ -23,11 +23,17 @@ Title text for the button to remove a CGM from Loop */
 /* Section title for latest glucose calibration */
 "Latest Calibration" = "Letzte Kalibrierung";
 
+/* Section title for latest connection date */
+"Latest Connection" = "Letzte Verbindung";
+
 /* Section title for latest glucose reading */
 "Latest Reading" = "Letzter Wert";
 
 /* Button title to open CGM app */
 "Open App" = "App öffnen";
+
+/* Section title for remote data synchronization */
+"Remote Data Synchronization" = "Datensynchronisation";
 
 /* Title describing sensor session age */
 "Session Age" = "Sitzungsalter";
@@ -39,7 +45,11 @@ Title text for the button to remove a CGM from Loop */
 "Transmitter Age" = "Transmitteralter";
 
 /* The title text for the Dexcom G5/G6 transmitter ID config value */
-"Transmitter ID" = "Sender-ID";
+"Transmitter ID" = "Transmitter-ID";
 
 /* Title describing glucose trend */
 "Trend" = "Trend";
+
+/* The title text for the upload glucose switch cell */
+"Upload Readings" = "Werte hochladen";
+
