--- a/ResetTransmitter/de.lproj/Localizable.strings
+++ b/ResetTransmitter/de.lproj/Localizable.strings
@@ -12,5 +12,5 @@
 "Reset" = "Zurücksetzen";
 
 /* Notification title for background completion notification */
-"Transmitter Reset Complete" = "TZurücksetzen des Transmitters abgeschlossen";
+"Transmitter Reset Complete" = "Zurücksetzen des Transmitters abgeschlossen";
 
